--- a/docs/Show-ADTInstallationProgress.mdx
+++ b/docs/Show-ADTInstallationProgress.mdx
@@ -13,7 +13,7 @@ Displays a progress dialog in a separate thread with an updateable custom messag
 
 ```powershell
 Show-ADTInstallationProgress [[-WindowLocation] <String>] [[-MessageAlignment] <DialogMessageAlignment>]
- [-NotTopMost] [-NoRelocation] -WindowTitle <String> -WindowSubtitle <String> -StatusMessage <String>
+ [-NotTopMost] [-NoRelocation] -Title <String> -Subtitle <String> -StatusMessage <String>
  -StatusMessageDetail <String> [<CommonParameters>]
 ```
 
@@ -159,7 +159,7 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
-### -WindowSubtitle
+### -Subtitle
 
 The subtitle of the window to be displayed with a fluent progress window.
 The default is the derived value from "$($adtSession.DeploymentType)".
@@ -176,7 +176,7 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
-### -WindowTitle
+### -Title
 
 The title of the window to be displayed.
 The default is the derived value from "$($adtSession.InstallTitle)".
