--- a/docs/Show-ADTInstallationProgress.mdx
+++ b/docs/Show-ADTInstallationProgress.mdx
@@ -13,8 +13,8 @@ Displays a progress dialog in a separate thread with an updateable custom messag
 
 ```powershell
 Show-ADTInstallationProgress [[-StatusMessage] <String>] [[-StatusMessageDetail] <String>]
- [[-MessageAlignment] <DialogMessageAlignment>] [[-WindowLocation] <String>] [-NotTopMost] [-NoRelocation]
- -Title <String> -Subtitle <String> [<CommonParameters>]
+ [[-StatusBarPercentage] <Double>] [[-MessageAlignment] <DialogMessageAlignment>] [[-WindowLocation] <String>]
+ [-NotTopMost] [-NoRelocation] -Title <String> -Subtitle <String> [<CommonParameters>]
 ```
 
 ## DESCRIPTION
@@ -94,6 +94,23 @@ Accept pipeline input: False
 Accept wildcard characters: False
 ```
 
+### -StatusBarPercentage
+
+The percentage to display on the status bar.
+If null or not supplied, the status bar will continuously scroll.
+
+```yaml
+Type: Double
+Parameter Sets: (All)
+Aliases:
+
+Required: False
+Position: 3
+Default value: 0
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
 ### -MessageAlignment
 
 The text alignment to use for the status message.
@@ -105,7 +122,7 @@ Aliases:
 Accepted values: Left, Center, Right
 
 Required: False
-Position: 3
+Position: 4
 Default value: Center
 Accept pipeline input: False
 Accept wildcard characters: False
@@ -121,7 +138,7 @@ Parameter Sets: (All)
 Aliases:
 
 Required: False
-Position: 4
+Position: 5
 Default value: Center
 Accept pipeline input: False
 Accept wildcard characters: False
