--- a/docs/Show-ADTInstallationRestartPrompt.mdx
+++ b/docs/Show-ADTInstallationRestartPrompt.mdx
@@ -14,22 +14,23 @@ Displays a restart prompt with a countdown to a forced restart.
 ### Countdown (Default)
 
 ```powershell
-Show-ADTInstallationRestartPrompt [-CountdownSeconds <UInt32>] [-CountdownNoHideSeconds <UInt32>] [-CustomText]
- [-NotTopMost] -Title <String> -Subtitle <String> [<CommonParameters>]
+Show-ADTInstallationRestartPrompt [-CountdownSeconds <UInt32>] [-CountdownNoHideSeconds <UInt32>]
+ [-WindowLocation <DialogPosition>] [-CustomText] [-NotTopMost] -Title <String> -Subtitle <String>
+ [<CommonParameters>]
 ```
 
 ### NoCountdown
 
 ```powershell
-Show-ADTInstallationRestartPrompt [-NoCountdown] [-CustomText] [-NotTopMost] -Title <String> -Subtitle <String>
- [<CommonParameters>]
+Show-ADTInstallationRestartPrompt [-NoCountdown] [-WindowLocation <DialogPosition>] [-CustomText] [-NotTopMost]
+ -Title <String> -Subtitle <String> [<CommonParameters>]
 ```
 
 ### SilentRestart
 
 ```powershell
-Show-ADTInstallationRestartPrompt [-SilentRestart] [-SilentCountdownSeconds <UInt32>] [-NotTopMost]
- -Title <String> -Subtitle <String> [<CommonParameters>]
+Show-ADTInstallationRestartPrompt [-SilentRestart] [-SilentCountdownSeconds <UInt32>]
+ [-WindowLocation <DialogPosition>] [-NotTopMost] -Title <String> -Subtitle <String> [<CommonParameters>]
 ```
 
 ## DESCRIPTION
@@ -142,6 +143,23 @@ Aliases:
 Required: False
 Position: Named
 Default value: 5
+Accept pipeline input: False
+Accept wildcard characters: False
+```
+
+### -WindowLocation
+
+The location of the dialog on the screen.
+
+```yaml
+Type: DialogPosition
+Parameter Sets: (All)
+Aliases:
+Accepted values: TopLeft, Top, TopRight, TopCenter, BottomLeft, Bottom, BottomRight, BottomCenter, Center
+
+Required: False
+Position: Named
+Default value: None
 Accept pipeline input: False
 Accept wildcard characters: False
 ```
