- Slight enum reorganisation for `Dialogs.DialogPosition`.

--- a/docs/Show-ADTInstallationRestartPrompt.mdx
+++ b/docs/Show-ADTInstallationRestartPrompt.mdx
@@ -155,7 +155,7 @@ The location of the dialog on the screen.
 Type: DialogPosition
 Parameter Sets: (All)
 Aliases:
-Accepted values: TopLeft, Top, TopRight, TopCenter, BottomLeft, Bottom, BottomRight, BottomCenter, Center
+Accepted values: TopLeft, Top, TopRight, TopCenter, Center, BottomLeft, Bottom, BottomRight, BottomCenter
 
 Required: False
 Position: Named
