--- a/docs/Show-ADTInstallationPrompt.mdx
+++ b/docs/Show-ADTInstallationPrompt.mdx
@@ -197,7 +197,7 @@ The location of the dialog on the screen.
 Type: DialogPosition
 Parameter Sets: (All)
 Aliases:
-Accepted values: TopLeft, Top, TopRight, TopCenter, BottomLeft, Bottom, BottomRight, BottomCenter, Center
+Accepted values: TopLeft, Top, TopRight, TopCenter, Center, BottomLeft, Bottom, BottomRight, BottomCenter
 
 Required: False
 Position: Named
